# UGV-Surveillance-with-Coordinated-Behavior-Using-Behavior-Trees

./: README.md  readme.MD
src/inception_p0/: CMakeLists.txt  package.xml
src/inception_p0/bt_xml/: tree.xml
src/inception_p0/config/: locations.yaml  person_pose.yaml
src/inception_p0/env-hooks/: multi_robot.dsv.in
src/inception_p0/include/: autonomy_node.h  navigation_behaviors.h  person_node.h
src/inception_p0/launch/: autonomy.launch.py  gazebo_multi_nav2_world.launch.py  global.launch.py
src/inception_p0/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  slam_launch.py
src/inception_p0/map/: aws_bookstore.pgm  aws_bookstore.yaml  bookstore.pgm  bookstore.yaml
src/inception_p0/params/: nav2_params.yaml
src/inception_p0/scripts/: combine_obs.py  red_cube_detect.py  yolo_v2.py
src/inception_p0/src/: autonomy_node.cpp  navigation_behaviors.cpp  person_node.cpp
src/inception_p0/worlds/: bookstore.world
